# cuda_cross_test

./: README.md  main.cpp
deviceQuery/: .gitignore  CMakeLists.txt  deviceQuery.cpp
